removed padding from header to prevent overflow

--- a/src/components/01 Destination/Destination.css
+++ b/src/components/01 Destination/Destination.css
@@ -188,6 +188,7 @@
         text-align: center;
         margin-top: 20%;
         margin-bottom: 0px;
+        padding: 0px;
         font-size: 18px!important;
     }
 
